--- a/src/blocks/page-footer/page-footer.pug
+++ b/src/blocks/page-footer/page-footer.pug
@@ -65,3 +65,4 @@ mixin page-footer(mods)
                 a(href="javascript:void()") политикой в области обработки персональных данных 
                 |и даю согласие на их обработку
             button(type="submit").footer-form__submit.btn Отправить
+        +to-top()
