--- a/src/blocks/to-top/to-top.pug
+++ b/src/blocks/to-top/to-top.pug
@@ -17,4 +17,5 @@ mixin to-top(mods)
       }
     }
 
-  a.to-top#to-top(class=allMods, href='#')&attributes(attributes) ↑
+  a.to-top#to-top(class=allMods, href='#')&attributes(attributes)
+    span.to-top__btn наверх
