--- a/src/pages/projects.pug
+++ b/src/pages/projects.pug
@@ -42,7 +42,8 @@ block content
           .project-search__search
             button.project-search__btn.btn поиск
   +project-grid()
-  +more('показать больше')
+  .projects__more
+    +more('показать больше')
 
 
 //- block footer
