--- a/src/blocks/accordeon/accordeon.scss
+++ b/src/blocks/accordeon/accordeon.scss
@@ -6,14 +6,18 @@
 
   $block-name: &; // #{$block-name}__element
 
-  padding: 120px 0;
+  padding: 56px 0;
   margin-bottom: -52px;
 
   @media (min-width: $screen-xxl) {
     margin-bottom: -80px;
   }
 
-  &__element{
+  @media (min-width: $screen-lg) {
+    padding: 120px 0;
+  }
+
+  &__element {
     &.open {
       .accordeon__check::before {
         opacity: 0;
@@ -24,10 +28,14 @@
       }
 
       .accordeon__content {
-        max-height: 2000px;
+        max-height: 5000px;
         opacity: 1;
         padding-top: 24px;
         visibility: visible;
+
+        @media (max-width: ($screen-lg - 1)) {
+          padding-bottom: 24px;
+        }
       }
     }
   }
@@ -35,19 +43,24 @@
   &__btn {
     position: relative;
     width: 100%;
-    height: 256px;
     border-radius: 16px;
     background-repeat: no-repeat;
     background-color: $main-dark;
     background-position: center center;
     background-size: cover;
     box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.24);
-    margin-bottom: 40px;
+    margin-bottom: 24px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 80px;
+    padding: 0 16px;
     cursor: pointer;
+
+    @media (min-width: $screen-lg) {
+      padding: 0 80px;
+      height: 256px;
+      margin-bottom: 40px;
+    }
 
     &::after {
       position: absolute;
@@ -79,7 +92,13 @@
     max-height: 0;
     opacity: 0;
     visibility: hidden;
-    transition: all $transition-time;
+    transition: all .6s;
+    margin: 0 auto;
+    padding: 0 16px;
+
+    @media (min-width: $screen-lg) {
+      padding: 0 40px;
+    }
   }
 
   &__title {
@@ -87,6 +106,17 @@
     color: $white;
     pointer-events: none;
     z-index: 2;
+    font: 16px $ff-i-b;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+
+    @media (min-width: $screen-xxl) {
+      font-size: 36px;
+    }
+
+    @media (min-width: $screen-lg) {
+      font-size: 30px;
+    }
   }
 
   &__check {
@@ -100,6 +130,11 @@
     pointer-events: none;
     transition: all $transition-time;
 
+    @media (max-width: ($screen-lg - 1)) {
+      width: 24px;
+      height: 24px;
+      border-radius: 3px;
+    }
 
     &::after {
       position: absolute;
@@ -115,6 +150,9 @@
       opacity: 1;
       transition: all $transition-time;
 
+      @media (max-width: ($screen-lg - 1)) {
+        width: 16px;
+      }
     }
 
     &::before {
@@ -131,11 +169,51 @@
       z-index: 3;
       opacity: 1;
       transition: all $transition-time;
+
+      @media (max-width: ($screen-lg - 1)) {
+        height: 16px;
+      }
     }
+
   }
 
 
   .task__item::before {
     background-color: $white;
+  }
+
+}
+
+.accordeon--industries {
+  .accordeon__btn {
+    &::after {
+      background: linear-gradient(0deg, rgba(64, 119, 115, 0.85), rgba(64, 119, 115, 0.85));
+    }
+
+    &:hover {
+      &:after {
+        background: linear-gradient(0deg, rgba(102, 146, 143, 0.85), rgba(102, 146, 143, 0.85));
+      }
+    }
+  }
+
+  .accordeon__element {
+    &.open {
+      .accordeon__btn:after {
+        background: linear-gradient(0deg, rgba(64, 119, 115, 0.85), rgba(64, 119, 115, 0.85));
+      }
+    }
+  }
+
+  .task__item::before{
+    background-color: $color-accent;
+  }
+  .collapse__btn{
+    color: $black;
+  }
+  .collapse__btn::before{
+    background: url(../img/arrow-down-black.svg);
+    width: 23px;
+    height: 24px;
   }
 }
