--- a/src/blocks/apply/apply.scss
+++ b/src/blocks/apply/apply.scss
@@ -6,7 +6,10 @@
 
   $block-name: &; // #{$block-name}__element
 
-  margin-bottom: 64px;
+  margin-bottom: 40px;
+  @media (min-width: $screen-lg){
+    margin-bottom: 64px;
+  }
 
   &__title {
     margin-bottom: 56px;
@@ -58,6 +61,11 @@
     @media (min-width: $screen-lg) {
       width: 60px;
       height: 60px;
+    }
+
+    svg{
+      width: 100%;
+      height: 100%;
     }
   }
 
