--- a/src/blocks/best/best.scss
+++ b/src/blocks/best/best.scss
@@ -114,12 +114,12 @@
   &__screen-list {
     padding: 0;
     list-style: none;
-    margin-bottom: 64px;
+    margin-bottom: 40px;
 
     @media (min-width: $screen-lg) {
       display: flex;
       flex-wrap: wrap;
-      margin: 0 -20px;
+      margin: 0 -20px 40px;
     }
   }
 
@@ -134,7 +134,7 @@
     }
 
     img{
-      border-radius: 6px;
+      width: 100%;
     }
   }
 }
