--- a/src/blocks/map/map.scss
+++ b/src/blocks/map/map.scss
@@ -29,9 +29,11 @@
   }
 
   &__item {
+    margin-bottom: 32px;
     @media (min-width: $screen-lg) {
       flex: 0 0 33.3333%;
       padding: 0 20px;
+      margin-bottom: 0;
     }
   }
 
@@ -45,7 +47,10 @@
   &__label {
     color: $main-dark;
     
-    margin-bottom: 32px;
+    margin-bottom: 16px;
+    @media (min-width: $screen-lg){
+      margin-bottom: 32px;
+    }
 
     p {
       text-transform: uppercase;
