--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -123,9 +123,7 @@ body {
       left: 0px;
       width: 100%;
       height: 100%;
-      background: linear-gradient(0deg, #00bfff 0, #00e68a 100%);
-      ;
-      opacity: 0.5;
+      background: rgba(1,73,69,.48);
       z-index: 10;
       transition: all $transition-time;
     }
@@ -430,9 +428,7 @@ pre {
   }
 }
 
-a:hover {
-  color: $main-light;
-}
+
 
 //choices
 
@@ -528,17 +524,131 @@ a:hover {
 
 //choices ends
 
-.mt-80{
+.mt-80 {
   margin-top: 48px;
 
   @media (min-width: $screen-lg) {
-margin-top: 80px;
+    margin-top: 80px;
   }
 }
-.mb-64{
+
+.mb-64 {
   margin-top: 48px;
 
   @media (min-width: $screen-lg) {
-margin-top: 64px;
+    margin-top: 64px;
   }
 }
+
+//fancybox
+
+.popup>.carousel__button.is-close {
+  width: 20px;
+  height: 20px;
+  top: 20px;
+  right: 20px;
+  color: #336D69;
+  padding: 0;
+}
+.carousel__button svg{
+width: 18px;
+height: 18px;
+  filter: none;
+}
+.fancybox__content :focus:not(.carousel__button.is-close) {
+  outline: none;
+}
+
+.fancybox__content {
+  padding: 40px 80px;
+}
+
+.fancybox__backdrop {
+  background: rgba(1, 73, 69, .48);
+}
+
+
+//fancybox ends
+
+/*-- Custom checkbox --*/
+
+.custom-checkbox {
+
+  font: 12px/1.3 $ff-i-r;
+  color: $white;
+  letter-spacing: .05em;
+  text-decoration: none;
+  transition: all .3s;
+
+  @media (min-width: $screen-xxl) {
+    font-size: 14px;
+  }
+
+  span {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    border-radius: 4px;
+    border: none;
+    margin-left: -40px;
+    background-color: #336D69;
+  }
+
+  a {
+    color: $color-accent;
+    text-decoration: none;
+    font-weight: 700;
+  }
+
+  input:checked+span:before {
+    content: "";
+    position: absolute;
+    left: 6px;
+    top: 6px;
+    width: 12px;
+    height: 12px;
+    border-radius: 2px;
+    background-color: $main-light;
+  }
+}
+.custom-checkbox--white {
+
+  font: 12px/1.3 $ff-i-r;
+  color: $black;
+  letter-spacing: .05em;
+  text-decoration: none;
+  transition: all .3s;
+
+  @media (min-width: $screen-xxl) {
+    font-size: 14px;
+  }
+
+  span {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    border-radius: 4px;
+    border: 1px solid $border-color;
+    margin-left: -40px;
+    background-color: $white;
+  }
+
+  a {
+    color: $color-accent;
+    text-decoration: none;
+    font-weight: 700;
+  }
+
+  input:checked+span:before {
+    content: "";
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    width: 12px;
+    height: 12px;
+    border-radius: 2px;
+    background-color: $main-light;
+  }
+}
+
+
