--- a/src/blocks/task/task.scss
+++ b/src/blocks/task/task.scss
@@ -23,8 +23,10 @@
   &__list {
     list-style: none;
     padding-left: 20px;
+    margin-bottom: 40px;
     @media (min-width: $screen-lg) {
       padding-left: 26px;
+      margin-bottom: 80px;
     }
   }
 
