--- a/src/blocks/to-top/to-top.scss
+++ b/src/blocks/to-top/to-top.scss
@@ -2,37 +2,63 @@
 // модификаторов, псевдоселекторов, псевдоэлементов, $media-условий...
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
-$transition-time:             0.3s !default;
+$transition-time: 0.3s !default;
 
 .to-top {
 
-  $block-name:                &; // #{$block-name}__element
+  $block-name: &; // #{$block-name}__element
 
-  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(270deg, #00BFFF -0.23%, #00E68A 99.77%);
+  box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.24);
+  border-radius: 8px;
+  text-decoration: none;
+  position: absolute;
   z-index: 99;
-  right: 1rem;
-  bottom: 1rem;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  background-color: #000;
-  color: transparent;
-  font: 0/0 a; // stylelint-disable-line
-  // см. bg-img/to-up.svg
-  // http://yoksel.github.io/url-encoder/ru/
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 17 11' width='17' height='11'%3E%3Cpath fill='%23fff' d='M.202 1.97L1.956.204A.61.61 0 0 1 2.43 0a.61.61 0 0 1 .47.204L8.5 5.84 14.1.204A.61.61 0 0 1 14.57 0a.61.61 0 0 1 .474.204l1.754 1.766a.618.618 0 0 1 .202.473.62.62 0 0 1-.202.476l-7.826 7.875A.61.61 0 0 1 8.5 11a.61.61 0 0 1-.472-.204L.202 2.92A.618.618 0 0 1 0 2.444c0-.203.067-.34.202-.475z'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: center;
-  transform: rotate(180deg);
+  right: 0;
+  top: 0px;
+  width: 56px;
+  height: 56px;
+  padding: 8px;
   transition: opacity $transition-time;
 
-  .js & {
-    opacity: 0;
-    visibility: hidden;
+  @media (min-width: $screen-md) {
+    display: none;
+  }
 
-    &--visible {
-      opacity: 1;
-      visibility: visible;
+  &__btn {
+    font: 10px/1.5 $ff-i-b;
+    color: $white;
+    white-space: nowrap;
+    padding-top: 12px;
+    position: relative;
+
+    &::before {
+      position: absolute;
+      content: '';
+      background: url(../img/arrow-down-white.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      border: 0;
+      width: 16px;
+      height: 16px;
+      top: -8px;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: all $transition-time;
     }
   }
+
+  // .js & {
+  //   opacity: 0;
+  //   visibility: hidden;
+
+  //   &--visible {
+  //     opacity: 1;
+  //     visibility: visible;
+  //   }
+  // }
 }
