--- a/src/blocks/top-slider/top-slider.scss
+++ b/src/blocks/top-slider/top-slider.scss
@@ -104,7 +104,13 @@
     }
 
     svg path {
-      opacity: 1;
+      opacity: .5;
+      transition: all $transition-time;
+    }
+    &:hover{
+      svg path{
+        opacity: 1;
+      }
     }
   }
 
@@ -127,7 +133,13 @@
     }
 
     svg path {
-      opacity: 1;
+      opacity: .5;
+      transition: all $transition-time;
+    }
+    &:hover{
+      svg path{
+        opacity: 1;
+      }
     }
   }
 
@@ -177,6 +189,10 @@
     background-color: $main-dark;
     opacity: 1;
     transition: all $transition-time;
+
+    &:hover{
+      background-color: $white;
+    }
   }
 
   .swiper-pagination-bullet-active {
