--- a/src/pages/all-pages.pug
+++ b/src/pages/all-pages.pug
@@ -16,16 +16,21 @@ block content
       .all-pages__inner
         p #[a.h5(href="index.html", target="_blank").link Главная]
         p #[a.h5(href="about.html", target="_blank").link Кто мы]
+        p #[a.h5(href="news.html", target="_blank").link Новости]
+        p #[a.h5(href="news-det.html", target="_blank").link Новости Детальная]
+        p #[a.h5(href="corp.html", target="_blank").link Корпоративная ответственность]
         p #[a.h5(href="solutions.html", target="_blank").link Решения]
         p #[a.h5(href="solutions-det1.html", target="_blank").link Решения детальная - Энергоучёт и энергоэффективность]
         p #[a.h5(href="monitoring.html", target="_blank").link Решения детальная - Мониторинг технологических процессов и производств]
         p #[a.h5(href="planning.html", target="_blank").link Планирование и оптимизация производственных процессов]
         p #[a.h5(href="industries.html", target="_blank").link Отрасли]
+        p #[a.h5(href="industries-det1.html", target="_blank").link Отрасли детальная - Цифровизация производства]
         p #[a.h5(href="projects.html", target="_blank").link Проекты]
-        //- p #[a.h5(href="project-det.html", target="_blank").link Проект детальная - Бинбанк]
-        //- p #[a.h5(href="project-descr.html", target="_blank").link Проект детальная - Автоматизированная система управления ремонтами и техническим обслуживанием оборудования]
+        p #[a.h5(href="project-det.html", target="_blank").link Проект детальная - Бинбанк]
+        p #[a.h5(href="project-descr.html", target="_blank").link Проект детальная - Автоматизированная система управления ремонтами и техническим обслуживанием оборудования]
         p #[a.h5(href="contacts.html", target="_blank").link Контакты]
         p #[a.h5(href="search-result.html", target="_blank").link Поиск по сайту]
+        p #[a.h5(href="personal.html", target="_blank").link Согласие на обработку персональных данных]
         p #[a.h5(href="404.html", target="_blank").link 404]
 
 //- block footer
