--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -22,8 +22,8 @@ html(class='page  no-js', lang='ru')
 
     //- Фавиконки (https://realfavicongenerator.net)
     //- link(rel='apple-touch-icon', sizes='180x180', href='/img/favicon/apple-touch-icon.png')
-    //- link(rel='icon', type='image/png', sizes='32x32', href='/img/favicon/favicon-32x32.png')
-    //- link(rel='icon', type='image/png', sizes='16x16', href='/img/favicon/favicon-16x16.png')
+    link(rel='icon', type='image/png', sizes='32x32', href='/img/favicon/favicon-32x32.png')
+    link(rel='icon', type='image/png', sizes='16x16', href='/img/favicon/favicon-16x16.png')
     //- link(rel='manifest', href='/img/favicon/site.webmanifest')
     //- link(rel='mask-icon', href='/img/favicon/safari-pinned-tab.svg', color='#5bbad5')
     //- meta(name='msapplication-TileColor', content='#5bbad5')
@@ -55,6 +55,7 @@ html(class='page  no-js', lang='ru')
 
       .page__footer-wrapper
         +page-footer()
+
 
     block page-bottom
       script(src='js/bundle.js')
