--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -151,7 +151,7 @@
 
   &:before {
     transform-origin: 100% 0;
-    height: 53px;
+    height: 55px;
     top: -31px;
     background-color: $main-light;
 
@@ -354,8 +354,20 @@
     font-size: 24px;
   }
 }
+.info {
+  font: 12px/1.3 $ff-i-r;
+  letter-spacing: 0.05em;
+
+  @media (min-width: $screen-xxl) {
+    font-size:  14px;
+  }
+}
 
 .pt-16 {
   padding-top: 16px;
 }
+
+
+
+
 
